@@ -108,7 +108,6 @@ public:
 	afx_msg int OnCreate(LPCREATESTRUCT lpCreateStruct);
 	afx_msg void OnClose();
 	afx_msg void OnDestroy();
-	afx_msg void OnTimer(UINT_PTR nIDEvent);
 	afx_msg LRESULT OnDVSPrevSub(WPARAM, LPARAM);
 	afx_msg LRESULT OnDVSNextSub(WPARAM, LPARAM);
 	afx_msg LRESULT OnDVSHideSub(WPARAM, LPARAM);
@@ -143,8 +142,6 @@ int CSystrayWindow::OnCreate(LPCREATESTRUCT lpCreateStruct)
 		//		g_hHook = SetWindowsHookEx(WH_GETMESSAGE, (HOOKPROC)HookProc, AfxGetInstanceHandle(), 0);
 	}
 
-	SetTimer(1, 5000, NULL);
-
 	PostMessage(s_uTaskbarRestart);
 
 	return 0;
@@ -170,19 +167,6 @@ void CSystrayWindow::OnDestroy()
 	}
 
 	PostQuitMessage(0);
-}
-
-void CSystrayWindow::OnTimer(UINT_PTR nIDEvent)
-{
-	if (nIDEvent == 1) {
-		UINT fScreenSaver = 0;
-		if (SystemParametersInfo(SPI_GETSCREENSAVEACTIVE, 0, (PVOID)&fScreenSaver, 0)) {
-			SystemParametersInfo(SPI_SETSCREENSAVEACTIVE, 0, 0, SPIF_SENDWININICHANGE); // this might not be needed at all...
-			SystemParametersInfo(SPI_SETSCREENSAVEACTIVE, fScreenSaver, 0, SPIF_SENDWININICHANGE);
-		}
-	}
-
-	CWnd::OnTimer(nIDEvent);
 }
 
 LRESULT CSystrayWindow::OnDVSPrevSub(WPARAM, LPARAM)
